<resources>
    <string name="app_name">OttoCash-SDK</string>
    <string name="title_ottocash">OttoCash</string>
    <string name="snk_ottocash">SNK OttoCash</string>
    <string name="snk_ottocash_mitra">SNK OttoCash dan Mitra</string>
    <string name="snk_gabungan">SNK Gabungan</string>
    <string name="hai">Hai!</string>
    <string name="desc_registration">Anda belum memiliki akun di OttoCash. Isi data dibawah dengan lengkap dan benar dan langsung aktifkan akun OttoCash Anda.</string>
    <string name="no_hp">Nomor HP</string>
    <string name="hp">0812 8**** *123</string>
    <string name="jika_ini_bukan">Jika ini bukan nomor kamu, segera kembali &amp; perbaiki data kamu di Mitraku</string>
    <string name="nama_sesuai_ktp">Nama Sesuai KTP</string>
    <string name="email_aktif">Email Aktif</string>
    <string name="sign_up_label_tac_link"><![CDATA[ Saya telah setuju dengan <u><font color="#d04a55">syarat dan
        ketentuan</font></u> yang berlaku.]]></string>
    <string name="sign_up_label_tac_link_mitra"><![CDATA[ Saya telah setuju dengan <u><font color="#d04a55">syarat dan
        ketentuan otorisasi layanan OttoCash dan Mitra</font></u>]]></string>
    <string name="aktifkan">Aktifkan</string>
    <string name="title_set_pin">Set PIN Anda</string>
    <string name="input_pin_old">Masukkan PIN lama Anda</string>
    <string name="input_pin_new">Masukkan PIN baru Anda</string>
    <string name="desc_pin_ottocash">Set PIN Anda untuk kemudahan bertransaksi</string>
    <string name="pin_ottocash">PIN OttoCash</string>
    <string name="confirm_pin_ottocash">Konfirmasi PIN OttoCash</string>
    <string name="save_ottocash">Simpan</string>
    <string name="input_otp_ottocash">Masukkan 6 Digit Kode OTP</string>
    <string name="describe_otp_ottocash">6 Digit kode OTP telah dikirimkan ke nomor 0812 xxxx xx23, Silahkan cek HP Anda</string>
    <string name="describe_qa_otp">Tidak menerima kode verifikasi ? Anda bisa mencoba meminta OTP lagi setelah waktu habis</string>
    <string name="resend_otp"><![CDATA[Tidak menerima kode verifikasi ? <u><font color="#d04a55"> Kirim Ulang</font></u>]]></string>
    <string name="registration_success"> Registrasi Akun OttoCash berhasil</string>
    <string name="desc_registration_success">Registrasi dan Aktivasi akun OttoCash kamu sudah berhasil.</string>
    <string name="registration_finish">Selesai</string>
    <string name="activation_account">Aktivasi Akun 081 6*** *4423 OttoCash Kamu di MITRAKU ? </string>
    <string name="desc_activation_account">Apabila Anda ingin menghubungkan akun OttoCash Anda dengan akun Mitraku silahkan klik tombol Aktifkan</string>
    <string name="activation_success">Akun Berhasil diaktifkan</string>
    <string name="desc_activation_success">Aktivasi akun OttoCash kamu sudah berhasil.</string>
    <string name="activation">Aktifkan</string>
    <string name="account_block">Akun Anda Terblokir</string>
    <string name="describe_account_block">Hubungi call center OttoCash untuk membuka blokir akun Anda\n Email : halo@ottocash.id\n No telp : (021) 5020 0909\n Senin - Jumat ( 08.00 - 20.00 )\n Website : ottocash.id\n</string>
    <string name="pin_login">Masukkan PIN OttoCash</string>
    <string name="desc_pin_login">Masukkan 6 digit PIN OttoCash Anda</string>
    <string name="invalid_pin">PIN tidak Valid</string>
    <string name="bill_payment">Biaya Tertagih</string>
    <string name="saldo_minus">Saldo Anda tidak mencukupi</string>
    <string name="describe_saldo_minus">Saldo OttoCash Anda kurang untuk melanjutknan transaksi ini. Isi ulang saldo OttoCash Anda.</string>
    <string name="set_pin_ottocash"><![CDATA[<u><font color="#D04A55">Pengaturan Pin</font></u> ]]></string>
    <string name="tac_ottocash"><![CDATA[<u><font color="#D04A55">Syarat dan Ketentuan</font></u> ]]></string>
    <string name="saldo_ottocash_reguler">Saldo OttoCash Reguler</string>
    <string name="call_center_ottocash">Hubungi OttoCash di</string>
    <string name="email_ottocash">Email</string>
    <string name="desc_email_ottocash">halo@ottocash.id</string>
    <string name="telp_ottocash">Nomor telepon</string>
    <string name="desc_telp_ottocash">021 5020 0909</string>
    <string name="web_ottocash">Website</string>
    <string name="desc_web_ottocash">ottocash.id</string>
    <string name="clock_ottocash">Waktu Operational</string>
    <string name="desc_clock_ottocash">Senin-Jumat 08.00 - 09.00</string>
    <string name="aktivasi_akun">Aktivasi Akun</string>
    <string name="desc_activation">Aktivasi Akun 081 6*** *4423  OttoCash Kamu di MITRAKU ? </string>
    <string name="call_cs_ilotte">Apabila Anda ingin menghubungkan akun OttoCash Anda dengan akun Mitraku silahkan klik tombol Aktifkan </string>
    <string name="privasi">Saya telah setuju dengan syarat dan ketentuan yang berlaku.</string>
    <string name="aktivasi_berhasil">Aktivasi Berhasil</string>
    <string name="akun_berhasil_di_aktifkan">Akun Berhasil diaktifkan</string>
    <string name="mengerti">Mengerti</string>
    <string name="registrasi_ottocash">Registrasi OttoCash</string>
    <string name="hi_somebody">Hi Somebody,</string>
    <string name="question_account">Kamu belum memiliki akun di OttoCash. Isi data dibawah dengan lengkap dan benar dan langsung aktifkan akun OttoCash kamu.</string>
    <string name="set_pin_kamu">Set PIN Kamu</string>
    <string name="set_pin">Set pin kamu untuk kemudahan bertransaksi di MitraKu menggunakan OttoCash</string>
    <string name="konfirmasi_pin_ottocash">Konfirmasi PIN OttoCash</string>
    <string name="otentifikasi_akun">Otentifikasi Akun</string>
    <string name="masukkan_6_digit_kode_otp">Masukkan 6 Digit Kode OTP</string>
    <string name="_6_digit_kode_otp">6 Digit kode OTP telah dikirimkan ke nomor 0812 xxxx xx23, silahkan cek HP Anda</string>
    <string name="tidak_menerima">Tidak menerima kode verifikasi ? Anda bisa mencoba meminta OTP lagi setelah waktu habis</string>
    <string name="register_success">Registrasi Akun OttoCash berhasil</string>
    <string name="register_akun_berhasil">Registrasi Akun OttoCash berhasil</string>
    <string name="review_payment">Review Payment</string>
    <string name="silahkan_masukkan">Masukkan 6 digit pin OttoCash Anda</string>
    <string name="masukkan_pin_ottocash">Masukkan Pin OttoCash</string>
    <string name="check_out_berhasil">Check Out Berhasil</string>
    <string name="cek_status_barang">Cek Status Barang</string>
    <string name="barang_kamu">Barang kamu akan segera kami kirim, harap bersabar. Anda bisa mengecek status barang Anda pada halaman MitraKu atau klik tombol dibawah</string>
    <string name="ottocash_plush">OttoCash Plush</string>
    <string name="saldo_ottocash">Hi Fajar, Saldo OttoCash Reguler kamu</string>
    <string name="rp_388_000">Rp 388.000</string>
    <string name="bayar">Bayar</string>
    <string name="pembayaran_kamu_ke_toko">Pembayaran kamu ke Toko Ucok tidak berhasil kami proses, mohon mengulang proses pembayaran kembali</string>
    <string name="melalui_mbanking"><![CDATA[MELALUI INTERNET BANKING & MOBILE BANKING]]></string>
    <string name="m_banking"><![CDATA[MELALUI INTERNET BANKING & MOBILE BANKING]]></string>
    <string name="call_service_blokir">Hubungi call center OttoCash untuk membuka blokir akun Anda Email : halo@ottocash.id\n No telp : (021) 5020 0909\n Senin - Jumat ( 08.00 - 20.00 )\n Website : ottocash.id</string>
    <string name="back_blocked">Kembali ke Halaman Utama</string>
    <string name="masukkan_checkout">Silahkan masukkan 6 digit Ottocash kamu untuk membayar transaksi ini menggunakan OttoCash</string>
    <string name="dialog_tittle_plus">Khusus Pengguna OttoCash Plus</string>
    <string name="dialog_message_plus">Fitur ini hanya tersedia bagi pengguna Ottocash Plus. Lakukan upgrade di aplikasi OttoCash</string>
    <string name="dialog_button_plus">Tutup</string>
    <string name="dialog_tittle_coming_soon">Akan Segera Hadir!</string>
    <string name="dialog_message_coming_soon">Request money akan hadir untuk kemudahan Anda dalam transaksi menggunakan OttoCash</string>
    <string name="dialog_button_coming_soon">Tutup</string>
    <string name="atm_1">1. Datang ke mesin ATM, masukkan kartu dan PIN ATM Kamu</string>
    <string name="atm_2">2. Pilih menu transfer</string>
    <string name="atm_3">3. Pilih transfer ke bank lain</string>
    <string name="atm_4"><![CDATA[4. Masukkan kode Bank Ina Perdana <strong> <font color="#056fb6">&nbsp;(513)</font></strong>]]></string>
    <string name="atm_5">5. Masukkan nomor virtual account Kamu : </string>
    <string name="atm_6">6. Masukkan nominal yang diinginkan</string>
    <string name="atm_7">7. Konfirmasi transaksi telah berhasil.</string>
    <string name="mbank_1">1. Buka internet/mobile banking</string>
    <string name="mbank_2">2. Pilih menu transfer antar Bank/Bank lain</string>
    <string name="mbank_3"><![CDATA[3. Pilih <strong> <font color="#056fb6">&nbsp;Bank Ina Perdana</font></strong> sebagai bank tujuan transfer]]></string>
    <string name="mbank_4">4. Pilih menu transfer online antar Bank / Bank lain</string>
    <string name="mbank_5">5. Masukkan nomor virtual account Kamu : </string>
    <string name="mbank_6">6. Masukkan nominal yang diinginkan</string>
    <string name="mbank_7">7. Konfirmasi transaksi telah berhasil.</string>
    <string name="otp_resend">Tidak menerima kode verifikasi ?</string>
    <string name="req_money">Request\nMoney</string>
    <string name="tf_teman">Transfer\nTeman</string>
    <string name="sell_pay">Pembelian/\nPembayaran</string>
    <string name="history_transaction">History\nTransaksi</string>
    <string name="syarat_ketentuan"><![CDATA[<u><font color="#056fb6">&nbsp;Syarat dan Ketentuan</font></u>]]></string>
    <string name="title_activity_term_and_condition">Syarat dan Ketentuan</string>
    <string name="investment_form_data_label_tac">Saya telah setuju dengan syarat dan
    ketentuan yang berlaku</string>
    <string name="dialog_title">Khusus Pengguna OttoCash Plus</string>
    <string name="dialog_msg">Fitur ini hanya tersedia bagi pengguna OttoCash Plus. Lakukan upgrade di aplikasi OttoCash</string>
    <string name="dialog_btn_close">Tutup</string>
    <string name="kirim_ulang"><u> Kirim Ulang</u></string>
    <string name="server_error">Tidak dapat terhubung ke server. Silahkan Coba lagi</string>
    <string name="close">Tutup</string>
    <string name="otp_verification_msg_otp_not_match">OTP Tidak Sesuai</string>
    <string name="information">Pemberitahuan</string>
    <string name="no_internet_connection">Silahkan cek koneksi internet anda!</string>
    <string name="sign_up_msg_invalid_fullname">Nama tidak boleh mengandung angka dan simbol</string>
    <string name="loading">Loading</string>
    <string name="dialog_btn_back">Kembali</string>
    <string name="dialog_tittle_saldo">SALDO ANDA TIDAK MENCUKUPI</string>
    <string name="dialog_message_saldo">Saldo Ottocash Anda kurang untuk melanjutkan transaksi ini, Isi ulang saldo OttoCash Anda.</string>
    <string name="masukkan_pin">Masukkan Pin</string>
    <string name="aktivasi_akun_ottocash_kamu_sudah_berhasil">Aktivasi akun OttoCash kamu sudah berhasil.</string>
    <string name="akun_anda_terblokir">Akun Anda Terblokir</string>
    <string name="check_out_berhasil_">CHECK OUT BERHASIL</string>
    <string name="ottocash_reguler">OttoCash Reguler</string>
    <string name="ottocash_title_history">Riwayat Transaksi</string>
    <string name="hubungi_ottocash_di">Hubungi OttoCash di</string>
    <string name="halo_ottocash_id">halo@ottocash.id</string>
    <string name="email">Email</string>
    <string name="nomor_telepon">Nomor telepon</string>
    <string name="_021_5020_0909">021 5020 0909</string>
    <string name="website">Website</string>
    <string name="ottocash_id">OttoCash.id</string>
    <string name="waktu_operational">Waktu Operational</string>
</resources>