<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/m_banking"
        android:textAppearance="@style/BarlowSemiBold"
        android:textSize="10sp" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="15dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvMbank1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:lineSpacingExtra="10dp"
            android:text="@string/mbank_1"
            android:textAppearance="@style/BarlowRegular"
            android:textSize="12sp" />

            <TextView
                android:id="@+id/tvMbank2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:lineSpacingExtra="10dp"
                android:text="@string/mbank_2"
                android:textAppearance="@style/BarlowRegular"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvMbank3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:lineSpacingExtra="10dp"
                android:text="@string/mbank_3"
                android:textAppearance="@style/BarlowRegular"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvMbank4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:lineSpacingExtra="10dp"
                android:text="@string/mbank_4"
                android:textAppearance="@style/BarlowRegular"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvMbank5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:lineSpacingExtra="10dp"
                android:text="@string/mbank_5"
                android:textAppearance="@style/BarlowRegular"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvMbank6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:lineSpacingExtra="10dp"
                android:text="@string/mbank_6"
                android:textAppearance="@style/BarlowRegular"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvMbank7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:lineSpacingExtra="10dp"
                android:text="@string/mbank_7"
                android:textAppearance="@style/BarlowRegular"
                android:textSize="12sp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>