<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="38dp"
        android:text="MELALUI ATM"
        android:textAppearance="@style/BarlowSemiBold"
        android:textSize="10sp" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_margin="15dp"
            android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvAtm1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="10dp"
            android:padding="10dp"
            android:text="@string/atm_1"
            android:textAppearance="@style/BarlowRegular"
            android:textSize="12sp" />

            <TextView
                android:id="@+id/tvAtm2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="10dp"
                android:padding="10dp"
                android:text="@string/atm_2"
                android:textAppearance="@style/BarlowRegular"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvAtm3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="10dp"
                android:padding="10dp"
                android:text="@string/atm_3"
                android:textAppearance="@style/BarlowRegular"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvAtm4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="10dp"
                android:padding="10dp"
                android:text="@string/atm_4"
                android:textAppearance="@style/BarlowRegular"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvAtm5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="10dp"
                android:padding="10dp"
                android:text="@string/atm_5"
                android:textAppearance="@style/BarlowRegular"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvAtm6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="10dp"
                android:padding="10dp"
                android:text="@string/atm_6"
                android:textAppearance="@style/BarlowRegular"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvAtm7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="10dp"
                android:padding="10dp"
                android:text="@string/atm_7"
                android:textAppearance="@style/BarlowRegular"
                android:textSize="12sp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>