<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_pin_kamu"
        android:textAppearance="@style/RobotoMedium"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/set_pin"
        android:textAppearance="@style/RobotoRegular"
        android:textColor="@color/Grey_8b8b8b"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/pin_ottocash"
        android:textAppearance="@style/RobotoMedium"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/edtPin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_white_input"
        android:inputType="numberPassword"
        android:paddingLeft="14dp"
        android:textAppearance="@style/RobotoRegular"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/konfirmasi_pin_ottocash"
        android:textAppearance="@style/RobotoMedium"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/edtConfirmPin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_white_input"
        android:inputType="numberPassword"
        android:paddingLeft="14dp"
        android:textAppearance="@style/RobotoRegular"
        android:textSize="12sp" />

</LinearLayout>