<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.payment.CheckOutSuccessActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Black_81868a">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/check_out_berhasil"
            android:textAppearance="@style/BarlowSemiBold"
            android:textColor="@color/color_white"
            android:textSize="14sp" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="90dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="26dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@mipmap/ic_success" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="14dp"
            android:text="@string/check_out_berhasil_"
            android:textAppearance="@style/RobotoMedium"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="14dp"
            android:gravity="center"
            android:text="@string/barang_kamu"
            android:textColor="@color/Grey_8b8b8b" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnBottom"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/Red_d04a55"
            android:gravity="center"
            android:text="@string/cek_status_barang"
            android:textAppearance="@style/RobotoBold"
            android:textColor="@color/White_ffffff"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>