<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activities.account.activation.ActivationActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Black_81868a">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="20dp"
            android:src="@mipmap/ic_back" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            android:text="@string/aktivasi_akun"
            android:textAppearance="@style/BarlowSemiBold"
            android:textColor="@color/White_ffffff"
            android:textSize="14sp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/partial_header" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@mipmap/ic_otto_cash" />

        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/desc_activation"
            android:textAppearance="@style/RobotoMedium"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/call_cs_ilotte"
            android:textAppearance="@style/RobotoRegular"
            android:textColor="@color/Grey_8b8b8b"
            android:textSize="12sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="26dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cboxPrivation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:theme="@style/checkbox" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tvTac"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="24dp"
                    android:autoLink="all"
                    android:gravity="center_vertical"
                    android:linksClickable="true"
                    android:padding="5dp"
                    android:text="@string/sign_up_label_tac_link"
                    android:textAppearance="@style/BarlowMedium"
                    android:textSize="14sp" />
            </LinearLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/btnBottom"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@drawable/button_primary_selected_bg"
            android:gravity="center"
            android:text="@string/aktifkan"
            android:textAppearance="@style/RobotoBold"
            android:textColor="@color/White_ffffff"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>
